integration/snapshots/merge-two-reports.snap
---
source: integration/merge-two-reports.toml
---
     Loading JSON reports
      Loaded 2 JSON reports
     Merging annotations
   Collected 3 unique annotations
   Assigning new annotation IDs
    Assigned IDs to 3 annotations
     Merging specifications
      Merged 1 specifications
     Merging statuses
      Merged 3 statuses
   Remapping annotation IDs
    Remapped IDs in 3 statuses
     Writing JSON output
       Wrote merged report to merged.json

