integration/snapshots/report-ignore-whitespace_json_v2.snap
---
source: xtask/src/tests.rs
expression: json_v2
---
{
  "annotations": [
    {
      "comment": "This      SHOULD         ignore        whitespace.\n",
      "id": "542dc87a792663e0",
      "level": "Should",
      "line": 7,
      "quote": "This      SHOULD         ignore        whitespace.",
      "source": ".duvet/requirements/my-spec/testing.toml",
      "target_path": "my-spec.md",
      "target_section": "testing",
      "type": "SPEC"
    },
    {
      "id": "3708ec719080b309",
      "level": "Auto",
      "line": 1,
      "quote": "This SHOULD             ignore         whitespace.",
      "source": "src/my-code.rs",
      "target_path": "my-spec.md",
      "target_section": "testing",
      "type": "CITATION"
    }
  ],
  "coverage": {
    "542dc87a792663e0": {
      "citation": 50,
      "related": [
        "3708ec719080b309"
      ],
      "spec": 50
    }
  },
  "refs": [
    {},
    {
      "citation": true,
      "level": "Should",
      "spec": true
    }
  ],
  "specifications": {
    "my-spec.md": {
      "format": "markdown",
      "sections": [
        {
          "id": "testing",
          "lines": [
            [
              {
                "annotation_ids": [
                  "542dc87a792663e0",
                  "3708ec719080b309"
                ],
                "status_id": 1,
                "text": "This      SHOULD         ignore        whitespace."
              }
            ]
          ],
          "requirements": [
            "542dc87a792663e0"
          ],
          "title": "Testing"
        }
      ],
      "title": "Testing"
    }
  },
  "version": "2.0"
}
